# bazel-mods-demo

./: BUILD.bazel  MODULE.bazel  README.md  main_on_lib.py
